--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "babel-preset-react": "^6.24.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "dotenv-webpack": "^8.0.1",
     "express": "^4.17.1",
